--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:elevation="3dp"
+        android:elevation="4dp"
         android:text="@string/saving"
         android:textSize="25dp"
         android:visibility="invisible"
@@ -97,10 +97,12 @@
         app:layout_constraintVertical_bias="0.34" />
 
     <ImageView
+        android:id="@+id/coins1"
         android:layout_width="167dp"
         android:layout_height="59dp"
         android:layout_marginBottom="4dp"
         android:elevation="2dp"
+        android:visibility="invisible"
         android:src="@drawable/coinsfirst"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -109,20 +111,24 @@
 
 
     <ImageView
+        android:id="@+id/coins2"
         android:layout_width="201dp"
         android:layout_height="71dp"
         android:layout_marginBottom="20dp"
         android:elevation="2dp"
+        android:visibility="invisible"
         android:src="@drawable/coinssecond"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <ImageView
+        android:id="@+id/coins3"
         android:layout_width="203dp"
         android:layout_height="81dp"
         android:layout_marginBottom="36dp"
         android:elevation="3dp"
+        android:visibility="invisible"
         android:src="@drawable/coinsthird"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -130,10 +136,12 @@
         app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <ImageView
+        android:id="@+id/coins4"
         android:layout_width="223dp"
         android:layout_height="91dp"
         android:layout_marginBottom="52dp"
         android:elevation="3dp"
+        android:visibility="invisible"
         android:src="@drawable/coinsforth"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -141,10 +149,12 @@
 
 
     <ImageView
+        android:id="@+id/coins5"
         android:layout_width="202dp"
         android:layout_height="80dp"
         android:layout_marginBottom="80dp"
         android:elevation="3dp"
+        android:visibility="invisible"
         android:src="@drawable/coinsfifth"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -152,20 +162,24 @@
         app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <ImageView
+        android:id="@+id/coins6"
         android:layout_width="221dp"
         android:layout_height="92dp"
         android:layout_marginBottom="104dp"
         android:elevation="3dp"
+        android:visibility="invisible"
         android:src="@drawable/coinssixth"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <ImageView
+        android:id="@+id/coins7"
         android:layout_width="203dp"
         android:layout_height="76dp"
         android:layout_marginBottom="126dp"
         android:elevation="3dp"
+        android:visibility="invisible"
         android:src="@drawable/coinsseventh"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -173,20 +187,24 @@
         app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <ImageView
+        android:id="@+id/coins8"
         android:layout_width="203dp"
         android:layout_height="76dp"
         android:layout_marginBottom="156dp"
         android:elevation="3dp"
+        android:visibility="invisible"
         android:src="@drawable/coinseighth"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView" />
 
     <ImageView
+        android:id="@+id/coins9"
         android:layout_width="177dp"
         android:layout_height="57dp"
         android:layout_marginBottom="265dp"
         android:elevation="3dp"
+        android:visibility="invisible"
         android:src="@drawable/coinsnineth"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -222,7 +240,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:elevation="3dp"
+        android:elevation="4dp"
         android:text="@string/cost"
         android:textSize="25dp"
         android:visibility="invisible"
@@ -236,7 +254,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:elevation="3dp"
+        android:elevation="4dp"
         android:inputType="numberDecimal"
         android:text="costEditText"
         android:textSize="30dp"
@@ -251,7 +269,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:elevation="3dp"
+        android:elevation="4dp"
         android:text="Left"
         android:textAlignment="center"
         android:textSize="30dp"
