--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -226,13 +226,12 @@
         android:id="@+id/imageViewCharacter"
         android:layout_width="216dp"
         android:layout_height="203dp"
-        android:layout_marginStart="84dp"
         android:layout_marginTop="192dp"
         android:elevation="4dp"
         android:src="@drawable/griff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.882"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/HintToAddNewGoalTextView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
