--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="OtherActivities" parent="@style/Theme.AppCompat.Dialog">
+        <item name="android:textColor">@color/black</item>
+        <item name="colorButtonNormal">#c8a00b</item>
+        <item name="android:background">@drawable/dialog_bg</item>
+    </style>
 </resources>
