--- a/app/src/main/res/layout/addmoneyactivity.xml
+++ b/app/src/main/res/layout/addmoneyactivity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/editTextAddMoney"
@@ -13,38 +14,31 @@
         android:hint="@string/amountHint"
         android:maxLength="7"
         android:inputType="numberDecimal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColorHint="#616161"
+        android:textColor="@color/black"
+        android:theme="@style/MyEditTextTheme"/>
 
     <LinearLayout
-        android:layout_width="206dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextAddMoney">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/buttonMinus"
             android:layout_width="70dp"
-            android:layout_height="55dp"
-            android:layout_margin="8dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
-            android:backgroundTint="@color/buttonColor"
             android:src="@drawable/ic_baseline_remove_circle_24"
             android:text="minus" />
 
         <ImageView
             android:id="@+id/buttonPlus"
             android:layout_width="70dp"
-            android:layout_height="55dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
             android:src="@drawable/ic_baseline_add_circle_24" />
 
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
