--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -14,7 +14,10 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:hint="@string/itemHint"
-        android:maxLength="10" />
+        android:maxLength="10"
+        android:textColorHint="#616161"
+        android:textColor="@color/black"
+        android:theme="@style/MyEditTextTheme"/>
 
     <EditText
         android:id="@+id/edittextCost"
@@ -23,7 +26,10 @@
         android:layout_margin="8dp"
         android:inputType="numberDecimal"
         android:maxLength="7"
-        android:hint="@string/targetHint" />
+        android:hint="@string/targetHint"
+        android:textColorHint="#616161"
+        android:textColor="@color/black"
+        android:theme="@style/MyEditTextTheme"/>
 
     <LinearLayout
         android:layout_width="match_parent"
