--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,9 @@
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/statusBarColor</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorAccent">#c8a00b</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">#c8a00b</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
@@ -16,7 +17,12 @@
     <style name="OtherActivities" parent="@style/Theme.AppCompat.Dialog">
         <item name="android:textColor">@color/black</item>
         <item name="buttonTint">@color/black</item>
-        <item name="colorButtonNormal">#c8a00b</item>
+        <item name="colorButtonNormal">@color/buttonColor</item>
         <item name="android:background">@drawable/dialog_bg</item>
+    </style>
+    <style name="MyEditTextTheme">
+        <item name="colorControlNormal">@color/statusBarColor</item>
+        <item name="colorControlActivated">@color/buttonColor</item>
+        <item name="colorControlHighlight">#FFFFFF</item>
     </style>
 </resources>
