--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,22 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MySecondProjectMoneyBox" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/statusBarColor</item>
+        <item name="colorPrimaryVariant">@color/statusBarColorNight</item>
         <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
     </style>
 
     <style name="OtherActivities" parent="@style/Theme.AppCompat.Dialog">
         <item name="android:textColor">@color/black</item>
-        <item name="colorButtonNormal">#c8a00b</item>
+        <item name="android:tint">@color/mainActivityButtonsColorNight</item>
+        <item name="colorButtonNormal">@color/buttonColor</item>
         <item name="android:background">@drawable/dialog_bg</item>
+        <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColorNight</item>
     </style>
+    <style name="MyEditTextTheme">
+        <item name="colorControlNormal">@color/statusBarColorNight</item>
+        <item name="colorControlActivated">@color/buttonColor</item>
+        <item name="colorControlHighlight">#FFFFFF</item>
+    </style>
+
 </resources>
