--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dialogActivitiesBackgroundColor">#FFD14A</color>
-    <color name="backgroundColorBottomGradient">#ffd149</color>
+    <color name="dialogActivitiesBackgroundColorNight">#2e2e2e</color>
     <color name="backgroundColorTopGradient">#ffde70</color>
+    <color name="backgroundColorTopGradientNight">#373737</color>
+    <color name="backgroundColorBottomGradient">#ffd149</color>
+    <color name="backgroundColorBottomGradientNight">#111111</color>
     <color name="statusBarColor">#c9a73d</color>
-<!--    <color name="buttonColor">#937200</color>-->
+    <color name="statusBarColorNight">#111111</color>
+    <color name="mainActivityButtonsColor">#937200</color>
+    <color name="mainActivityButtonsColorNight">#616161</color>
     <color name="buttonColor">#c8a00b</color>
     <color name="textColorHintToAddNewGoalTextView">#8fbdcb</color>
 </resources>
