--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -16,8 +16,7 @@
         android:hint="@string/itemHint"
         android:maxLength="10"
         android:textColorHint="#616161"
-        android:textColor="@color/black"
-        android:theme="@style/MyEditTextTheme"/>
+        style="@style/MyEditTextTheme"/>
 
     <EditText
         android:id="@+id/edittextCost"
@@ -28,8 +27,7 @@
         android:maxLength="7"
         android:hint="@string/targetHint"
         android:textColorHint="#616161"
-        android:textColor="@color/black"
-        android:theme="@style/MyEditTextTheme"/>
+        style="@style/MyEditTextTheme"/>
 
     <LinearLayout
         android:layout_width="match_parent"
