--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -6,4 +6,16 @@
     <style name="MainActivityButtons">
         <item name="android:tint">@color/mainActivityButtonsColorNight</item>
     </style>
+    <style name="ChangeCharacterActivityTextColor">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="ChangeCharacterActivityBackgroundTextViewColor">
+        <item name="android:backgroundTint">@color/white</item>
+    </style>
+    <style name="MyEditTextTheme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/statusBarColorNight</item>
+
+    </style>
+
 </resources>
