--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,16 +8,12 @@
     </style>
 
     <style name="OtherActivities" parent="@style/Theme.AppCompat.Dialog">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:tint">@color/mainActivityButtonsColorNight</item>
         <item name="colorButtonNormal">@color/buttonColor</item>
         <item name="android:background">@drawable/dialog_bg</item>
         <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColorNight</item>
     </style>
-    <style name="MyEditTextTheme">
-        <item name="colorControlNormal">@color/statusBarColorNight</item>
-        <item name="colorControlActivated">@color/buttonColor</item>
-        <item name="colorControlHighlight">#FFFFFF</item>
-    </style>
+
 
 </resources>
