--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,17 @@
     <style name="MainActivityButtons">
         <item name="android:tint">@color/mainActivityButtonsColor</item>
     </style>
+    <style name="ChangeCharacterActivityTextColor">
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <style name="ChangeCharacterActivityBackgroundTextViewColor">
+        <item name="android:backgroundTint">@color/black</item>
+    </style>
+    <style name="MyEditTextTheme">
+        <item name="android:textColor">@color/black</item>
+        <item name="colorControlNormal">@color/statusBarColor</item>
+        <item name="colorControlActivated">@color/buttonColor</item>
+        <item name="colorControlHighlight">#FFFFFF</item>
+    </style>
+
 </resources>
