--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -15,6 +15,12 @@
     <style name="MyEditTextTheme">
         <item name="android:textColor">@color/white</item>
         <item name="android:backgroundTint">@color/statusBarColorNight</item>
+    </style>
+    <style name="AlertDialogStyle" parent="@android:style/Theme.Dialog">
+
+        <item name="android:textColor">#00FF00</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:textSize">10sp</item>
 
     </style>
 
