--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,9 +14,14 @@
     </style>
     <style name="MyEditTextTheme">
         <item name="android:textColor">@color/black</item>
-        <item name="colorControlNormal">@color/statusBarColor</item>
-        <item name="colorControlActivated">@color/buttonColor</item>
-        <item name="colorControlHighlight">#FFFFFF</item>
+        <item name="android:backgroundTint">@color/statusBarColor</item>
+    </style>
+    <style name="AlertDialogStyle" parent="@android:style/Theme.Dialog">
+
+        <item name="android:textColor">#00FF00</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:textSize">10sp</item>
+
     </style>
 
 </resources>
