--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="70dp"
         android:layout_margin="8dp"
         android:src="@drawable/ic_baseline_refresh_24"
-        style="@style/MainActivityButtons"
+        style="@style/ButtonsColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +35,7 @@
         android:layout_height="70dp"
         android:layout_margin="8dp"
         android:src="@drawable/ic_baseline_settings_24"
-        style="@style/MainActivityButtons"
+        style="@style/ButtonsColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +46,7 @@
         android:layout_height="70dp"
         android:src="@drawable/outline_currency_exchange_24"
         android:visibility="invisible"
-        style="@style/MainActivityButtons"
+        style="@style/ButtonsColor"
         app:layout_constraintBottom_toTopOf="@+id/adView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
