--- a/app/src/main/res/layout/change_character.xml
+++ b/app/src/main/res/layout/change_character.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="@string/characterNameGriff"
-            style="@style/ChangeCharacterActivityTextColor"/>
+            style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
         <RadioButton
             android:id="@+id/mrkrabsButton"
@@ -47,7 +47,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/characterNameMrKrabs"
-            style="@style/ChangeCharacterActivityTextColor"/>
+            style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
         <RadioButton
             android:id="@+id/mcduckButton"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:text="@string/characterNameScroogeMcDuck"
-            style="@style/ChangeCharacterActivityTextColor"/>
+            style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
     </RadioGroup>
 
@@ -74,7 +74,7 @@
         android:text="@string/checkBoxTextEnableVibrationChangeCharacter"
         android:checked="true"
         android:layout_margin="8dp"
-        style="@style/ChangeCharacterActivityTextColor"/>
+        style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
     <CheckBox
         android:id="@+id/checkBoxEnableSound"
@@ -84,7 +84,7 @@
         android:text="@string/checkBoxTextEnableSoundChangeCharacter"
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
-        style="@style/ChangeCharacterActivityTextColor"/>
+        style="@style/ChangeCharacterActivityTextAndRadioButtonColor"/>
 
     <TextView
         android:id="@+id/textView6"
@@ -106,7 +106,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="2dp"
             android:layout_weight="1"
-            android:text="@string/cancel" />
+            android:text="@string/cancel"
+            style="@style/ButtonsColor"/>
 
         <Button
             android:id="@+id/buttonOk"
@@ -114,7 +115,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="2dp"
-            android:text="OK" />
+            android:text="OK"
+            style="@style/ButtonsColor"/>
 
     </LinearLayout>
 
