--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -3,25 +3,20 @@
     <style name="MainActivityBackground">
         <item name="android:background">@drawable/backgroundcolornight</item>
     </style>
-    <style name="MainActivityButtons">
+    <style name="ButtonsColor">
         <item name="android:tint">@color/mainActivityButtonsColorNight</item>
+        <item name="android:backgroundTint">@color/buttonColorNight</item>
     </style>
     <style name="ChangeCharacterActivityTextColor">
         <item name="android:textColor">@color/white</item>
     </style>
-    <style name="ChangeCharacterActivityBackgroundTextViewColor">
+    <style name="ChangeCharacterActivityTextAndRadioButtonColor">
         <item name="android:backgroundTint">@color/white</item>
+        <item name="android:buttonTint">@color/buttonColorNight</item>
     </style>
     <style name="MyEditTextTheme">
         <item name="android:textColor">@color/white</item>
         <item name="android:backgroundTint">@color/statusBarColorNight</item>
-    </style>
-    <style name="AlertDialogStyle" parent="@android:style/Theme.Dialog">
-
-        <item name="android:textColor">#00FF00</item>
-        <item name="android:typeface">monospace</item>
-        <item name="android:textSize">10sp</item>
-
     </style>
 
 </resources>
