--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.MySecondProjectMoneyBox" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimaryVariant">@color/statusBarColorNight</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnSecondary">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
     </style>
 
@@ -14,6 +14,10 @@
         <item name="android:background">@drawable/dialog_bg</item>
         <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColorNight</item>
     </style>
-
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColorNight</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="buttonTint">@color/white</item>
+    </style>
 
 </resources>
