--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,11 +3,13 @@
     <style name="MainActivityBackground">
         <item name="android:background">@drawable/backgroundcolor</item>
     </style>
-    <style name="MainActivityButtons">
+    <style name="ButtonsColor">
         <item name="android:tint">@color/mainActivityButtonsColor</item>
+        <item name="android:backgroundTint">@color/buttonColor</item>
     </style>
-    <style name="ChangeCharacterActivityTextColor">
+    <style name="ChangeCharacterActivityTextAndRadioButtonColor">
         <item name="android:textColor">@color/black</item>
+        <item name="android:buttonTint">@color/buttonColor</item>
     </style>
     <style name="ChangeCharacterActivityBackgroundTextViewColor">
         <item name="android:backgroundTint">@color/black</item>
@@ -16,12 +18,6 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/statusBarColor</item>
     </style>
-    <style name="AlertDialogStyle" parent="@android:style/Theme.Dialog">
 
-        <item name="android:textColor">#00FF00</item>
-        <item name="android:typeface">monospace</item>
-        <item name="android:textSize">10sp</item>
-
-    </style>
 
 </resources>
