--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,12 +2,11 @@
     <!-- Base application theme. -->
     <style name="Theme.MySecondProjectMoneyBox" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimaryVariant">@color/statusBarColor</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
         <item name="colorAccent">#c8a00b</item>
         <item name="colorSecondary">#c8a00b</item>
         <item name="colorOnSecondary">@color/black</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-
     </style>
     <style name="OtherActivities" parent="@style/Theme.AppCompat.Dialog">
         <item name="android:textColor">@color/black</item>
@@ -15,6 +14,11 @@
         <item name="colorButtonNormal">@color/buttonColor</item>
         <item name="android:background">@drawable/dialog_bg</item>
         <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColor</item>
+    </style>
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColor</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="buttonTint">@color/black</item>
     </style>
 
 </resources>
