--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/MainActivityBackground"
-    tools:context=".MainActivity">
+    tools:context=".presentation.MainActivity">
 
     <ImageView
         android:id="@+id/imageViewThoughts"
