--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,8 +21,17 @@
         <item name="android:textColor">@color/black</item>
         <item name="buttonTint">@color/black</item>
     </style>
-<!--    <style name="BottomSheetStyle" parent="Theme.Design.BottomSheetDialog">-->
-<!--        <item name="android:background">@drawable/bottom_sheet_drawable</item>-->
-<!--    </style>-->
+    <style name="CustomBottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomBottomSheet</item>
+        <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColor</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    <!--TODO: ALL BOTTOM SHEET ABOVE KEYBOARD-->
+    <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
+        <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
+    </style>
 
 </resources>
