--- a/app/src/main/res/layout/addnewgoal.xml
+++ b/app/src/main/res/layout/addnewgoal.xml
@@ -44,23 +44,22 @@
         android:orientation="horizontal"
         android:layout_marginBottom="24dp">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginEnd="4dp"
             android:text="@string/cancel"
-            android:background="@color/tt_transparent"
             style="@style/ButtonsColor"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonOk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginStart="4dp"
-            android:text="Ok"
+            android:text="@string/ok"
             style="@style/ButtonsColor"/>
 
 
