--- a/app/src/main/res/layout/addmoneyactivity.xml
+++ b/app/src/main/res/layout/addmoneyactivity.xml
@@ -4,40 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="24dp">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:textSize="24sp"
+        android:text="@string/activityTitleNewGoal"/>
+
 
     <EditText
         android:id="@+id/editTextAddMoney"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginBottom="24dp"
         android:hint="@string/amountHint"
         android:maxLength="7"
         android:inputType="numberDecimal"
         android:textColorHint="#616161"
         style="@style/MyEditTextTheme"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/buttonMinus"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_baseline_remove_circle_24"
-            android:text="minus" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/buttonPlus"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_baseline_add_circle_24" />
+            <Button
+                android:id="@+id/buttonMinus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_baseline_remove_24"
+                android:layout_marginEnd="4dp"
+                android:text="@string/remove"
+                style="@style/ButtonsColorOutline"/>
 
+            <Button
+                android:id="@+id/buttonPlus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add"
+                android:drawableLeft="@drawable/ic_baseline_add_24"
+                android:layout_marginStart="4dp"
+                style="@style/ButtonsColor"/>
 
-    </LinearLayout>
-
+        </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
