--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,14 @@
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/black</item>
     </style>
+    <style name="ButtonsColorOutline">
+        <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="cornerRadius">24dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="strokeColor">@color/buttonColor</item>
+        <item name="strokeWidth">2dp</item>
+    </style>
     <style name="ChangeCharacterActivityTextAndRadioButtonColor">
         <item name="android:textColor">@color/black</item>
         <item name="android:buttonTint">@color/buttonColor</item>
