--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
         <item name="android:background">@drawable/dialog_bg</item>
         <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColor</item>
     </style>
-    <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.DayNight.Dialog.Alert">
         <item name="android:backgroundTint">@color/dialogActivitiesBackgroundColor</item>
         <item name="android:textColor">@color/black</item>
         <item name="buttonTint">@color/black</item>
@@ -29,7 +29,6 @@
         <item name="android:windowSoftInputMode">adjustResize</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    <!--TODO: ALL BOTTOM SHEET ABOVE KEYBOARD-->
     <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
         <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
     </style>
