deleted old classes, update dependencies

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/MainActivityBackground"
-    tools:context=".MainActivity">
+    tools:context=".presentation.activity.StartActivity">
 
     <ImageView
         android:id="@+id/imageViewThoughts"
@@ -37,13 +37,6 @@
         app:layout_constraintEnd_toEndOf="@+id/buttonReset"
         app:layout_constraintStart_toStartOf="@+id/buttonReset"
         app:layout_constraintTop_toBottomOf="@+id/buttonReset" />
-
-    <Button
-        android:id="@+id/testButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/buttonSettings"
