fixed full progress bar color in day theme

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -33,5 +33,8 @@
     <style name="CustomBottomSheet" parent="Widget.MaterialComponents.BottomSheet">
         <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceBottomSheetDialog</item>
     </style>
+    <style name="AccentColorForProgressBar">
+        <item name="colorAccent">@color/mainActivityButtonsColorNight</item>
+    </style>
 
 </resources>
