--- a/app/src/main/res/layout/goals_item.xml
+++ b/app/src/main/res/layout/goals_item.xml
@@ -6,20 +6,23 @@
     android:layout_margin="8dp">
 
     <LinearLayout
+        style="@style/ButtonsColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/dialog_bg"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/dialog_bg"
-        style="@style/ButtonsColor">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/goalNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
+            android:autoSizeMinTextSize="10sp"
+            android:autoSizeStepGranularity="2sp"
+            android:autoSizeTextType="uniform"
             android:padding="0dp"
             android:text="Item"
             android:textAlignment="center"
@@ -47,7 +50,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="0dp"
-                android:scaleY="7" />
+                android:scaleY="7"
+                android:theme="@style/AccentColorForProgressBar"
+                android:progress="50"/>
 
         </RelativeLayout>
 
@@ -55,6 +60,10 @@
             android:id="@+id/goalCost"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:autoSizeMinTextSize="10sp"
+            android:autoSizeStepGranularity="2sp"
+            android:autoSizeTextType="uniform"
+            android:maxLines="1"
             android:padding="0dp"
             android:text="Left"
             android:textAlignment="center"
