fixed text in thought image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/MainActivityBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/MainActivityBackground"
     tools:context=".presentation.activity.StartActivity">
 
     <ImageView
         android:id="@+id/imageViewThoughts"
+        style="@style/ThoughtsImageViewSrc"
         android:layout_width="393dp"
         android:layout_height="319dp"
         android:elevation="4dp"
-        style="@style/ThoughtsImageViewSrc"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/imageViewCharacter"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,11 +21,11 @@
 
     <ImageView
         android:id="@+id/buttonReset"
+        style="@style/ButtonsColor"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_margin="8dp"
         android:src="@drawable/ic_baseline_refresh_24"
-        style="@style/ButtonsColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,11 +40,11 @@
 
     <ImageView
         android:id="@+id/buttonSettings"
+        style="@style/ButtonsColor"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_margin="8dp"
         android:src="@drawable/ic_baseline_settings_24"
-        style="@style/ButtonsColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -102,41 +102,40 @@
         app:layout_constraintTop_toBottomOf="@+id/buttonAddSubMoney" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/item"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="16dp"
+        android:autoSizeMaxTextSize="36sp"
+        android:autoSizeMinTextSize="28sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:elevation="4dp"
-        android:text="@string/saving"
-        android:textSize="25dp"
+        android:maxLines="2"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="28sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
-        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
         app:layout_constraintTop_toTopOf="@+id/imageViewThoughts" />
 
     <TextView
-        android:id="@+id/item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:elevation="4dp"
-        android:text=""
-        android:textSize="30dp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
-        app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
         android:id="@+id/money"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autoSizeMaxTextSize="36sp"
+        android:autoSizeMinTextSize="16sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:elevation="2dp"
+        android:maxLines="1"
         android:text="0"
         android:textAlignment="center"
         android:textColor="#a5804a"
-        android:textSize="30sp"
+        android:layout_marginHorizontal="32dp"
+        android:textSize="28sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
@@ -151,8 +150,8 @@
         android:layout_height="59dp"
         android:layout_marginBottom="4dp"
         android:elevation="2dp"
-        android:visibility="invisible"
         android:src="@drawable/coinsfirst"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.544"
@@ -165,8 +164,8 @@
         android:layout_height="71dp"
         android:layout_marginBottom="20dp"
         android:elevation="2dp"
-        android:visibility="invisible"
         android:src="@drawable/coinssecond"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView" />
@@ -177,8 +176,8 @@
         android:layout_height="81dp"
         android:layout_marginBottom="36dp"
         android:elevation="3dp"
-        android:visibility="invisible"
         android:src="@drawable/coinsthird"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.517"
@@ -190,8 +189,8 @@
         android:layout_height="91dp"
         android:layout_marginBottom="52dp"
         android:elevation="3dp"
-        android:visibility="invisible"
         android:src="@drawable/coinsforth"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView" />
@@ -203,8 +202,8 @@
         android:layout_height="80dp"
         android:layout_marginBottom="80dp"
         android:elevation="3dp"
-        android:visibility="invisible"
         android:src="@drawable/coinsfifth"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.527"
@@ -216,8 +215,8 @@
         android:layout_height="92dp"
         android:layout_marginBottom="104dp"
         android:elevation="3dp"
-        android:visibility="invisible"
         android:src="@drawable/coinssixth"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView" />
@@ -228,8 +227,8 @@
         android:layout_height="76dp"
         android:layout_marginBottom="126dp"
         android:elevation="3dp"
-        android:visibility="invisible"
         android:src="@drawable/coinsseventh"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.462"
@@ -241,8 +240,8 @@
         android:layout_height="76dp"
         android:layout_marginBottom="156dp"
         android:elevation="3dp"
-        android:visibility="invisible"
         android:src="@drawable/coinseighth"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView" />
@@ -253,8 +252,8 @@
         android:layout_height="57dp"
         android:layout_marginBottom="265dp"
         android:elevation="3dp"
-        android:visibility="invisible"
         android:src="@drawable/coinsnineth"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.487"
@@ -284,32 +283,24 @@
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:elevation="4dp"
-        android:text="@string/cost"
-        android:textSize="25dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/leftTextView"
-        app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
-        app:layout_constraintTop_toBottomOf="@+id/item"
-        app:layout_constraintVertical_bias="0.40" />
-
-    <TextView
         android:id="@+id/costEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:autoSizeMaxTextSize="36sp"
+        android:autoSizeMinTextSize="9sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:elevation="4dp"
-        android:inputType="numberDecimal"
-        android:visibility="invisible"
+        android:maxLines="2"
+        android:layout_marginHorizontal="40dp"
         android:text="costEditText"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textSize="28sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
         app:layout_constraintHorizontal_bias="0.157"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/imageViewThoughts"
         app:layout_constraintTop_toBottomOf="@+id/item" />
 
 
@@ -318,10 +309,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
+        android:autoSizeMaxTextSize="36sp"
+        android:autoSizeMinTextSize="9sp"
+        android:autoSizeStepGranularity="2sp"
+        android:autoSizeTextType="uniform"
         android:elevation="4dp"
+        android:maxLines="2"
         android:text="Left"
         android:textAlignment="center"
-        android:textSize="30dp"
+        android:textSize="28sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/imageViewThoughts"
         app:layout_constraintHorizontal_bias="0.491"
